--- a/ACHIM.Logic/ACHIM.Logic.csproj
+++ b/ACHIM.Logic/ACHIM.Logic.csproj
@@ -32,9 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=2.3.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.Mono.3.0.1.13\lib\net40\Ninject.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Ninject">
+      <HintPath>..\Shared\Ninject\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.IO">
       <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.dll</HintPath>
@@ -66,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ACHIM.MotorControl\ACHIM.Positioning.csproj">
