--- a/ACHIM.MCP3008.Test/ACHIM.MCP3008.Test.csproj
+++ b/ACHIM.MCP3008.Test/ACHIM.MCP3008.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{49CF2F8A-5D79-492A-8BAC-9EDA6BE9B407}</ProjectGuid>
+    <ProjectGuid>{E830393E-63BC-475A-9D21-8ED549BD2DAB}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ACHIM.StopSwitch.Test</RootNamespace>
-    <AssemblyName>ACHIM.StopSwitch.Test</AssemblyName>
+    <RootNamespace>ACHIM.MCP3008.Test</RootNamespace>
+    <AssemblyName>ACHIM.MCP3008.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,12 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Shared\Ninject\Ninject.dll</HintPath>
-    </Reference>
     <Reference Include="Raspberry.IO">
       <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.dll</HintPath>
+    </Reference>
+    <Reference Include="Raspberry.IO.Components">
+      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.Components\bin\Debug\Raspberry.IO.Components.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.IO.GeneralPurpose">
       <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.GeneralPurpose.dll</HintPath>
@@ -55,24 +54,16 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnitsNet">
+      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.Components\bin\Debug\UnitsNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bindings\Bindings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ACHIM.Helper\ACHIM.Helper.csproj">
-      <Project>{bce0c438-3af8-4eef-bf70-7bd339c314ad}</Project>
-      <Name>ACHIM.Helper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ACHIM.MotorControl\ACHIM.Positioning.csproj">
-      <Project>{f72ac708-649c-4292-a9ab-012ffeedc15e}</Project>
-      <Name>ACHIM.Positioning</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
