--- a/ACHIM.MCP3008.Test/ACHIM.MCP3008.Test.csproj
+++ b/ACHIM.MCP3008.Test/ACHIM.MCP3008.Test.csproj
@@ -32,20 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Raspberry.IO">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.dll</HintPath>
+    <Reference Include="Raspberry.IO, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.dll</HintPath>
     </Reference>
-    <Reference Include="Raspberry.IO.Components">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.Components\bin\Debug\Raspberry.IO.Components.dll</HintPath>
+    <Reference Include="Raspberry.IO.Components, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.Components.dll</HintPath>
     </Reference>
-    <Reference Include="Raspberry.IO.GeneralPurpose">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.GeneralPurpose.dll</HintPath>
+    <Reference Include="Raspberry.IO.GeneralPurpose, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.GeneralPurpose.dll</HintPath>
     </Reference>
-    <Reference Include="Raspberry.IO.Interop">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.Interop.dll</HintPath>
-    </Reference>
-    <Reference Include="Raspberry.System">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.System.dll</HintPath>
+    <Reference Include="RaspberryPiDotNet">
+      <HintPath>C:\Users\boehm\Documents\Visual Studio 2015\Projects\ACHIM.MCP3008.TestEnvironment\Lib\RaspberryPiDotNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,9 +54,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnitsNet">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.Components\bin\Debug\UnitsNet.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -64,6 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ACHIM.Helper\ACHIM.Helper.csproj">
+      <Project>{bce0c438-3af8-4eef-bf70-7bd339c314ad}</Project>
+      <Name>ACHIM.Helper</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
