Added reference to libbcm2835.so

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Shared/Ninject/extensions/CommonServiceLocator.NinjectAdapter.dll.mdb
 /Shared/Ninject/LICENSE.txt
 /Shared/Ninject/Ninject.dll.mdb
+*.suo
