--- a/ACHIM.Logic/ACHIM.Logic.csproj
+++ b/ACHIM.Logic/ACHIM.Logic.csproj
@@ -65,6 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="libbcm2835.so">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ACHIM.MotorControl\ACHIM.Positioning.csproj">
