--- a/ACHIM.SoilSensor.Test/ACHIM.SoilSensor.Test.csproj
+++ b/ACHIM.SoilSensor.Test/ACHIM.SoilSensor.Test.csproj
@@ -33,16 +33,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Raspberry.IO">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.dll</HintPath>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.IO.GeneralPurpose">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.GeneralPurpose.dll</HintPath>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.GeneralPurpose.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.IO.Interop">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.Interop.dll</HintPath>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.IO.Interop.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.System">
-      <HintPath>..\..\raspberry-sharp-io\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.System.dll</HintPath>
+      <HintPath>..\Shared\RaspberrySharpIO\Raspberry.System.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
