--- a/ACHIM.MotorControl/ACHIM.Positioning.csproj
+++ b/ACHIM.MotorControl/ACHIM.Positioning.csproj
@@ -60,9 +60,9 @@
     <Compile Include="StopSwitches\StopSwitch.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ACHIM.Helper\ACHIM.Helper.csproj">
+    <ProjectReference Include="..\ACHIM.Helper\ACHIM.ADConverter.csproj">
       <Project>{bce0c438-3af8-4eef-bf70-7bd339c314ad}</Project>
-      <Name>ACHIM.Helper</Name>
+      <Name>ACHIM.ADConverter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
