--- a/ACHIM.PumpControl/ACHIM.PumpControl.csproj
+++ b/ACHIM.PumpControl/ACHIM.PumpControl.csproj
@@ -56,9 +56,9 @@
     <Compile Include="PumpController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ACHIM.Helper\ACHIM.Helper.csproj">
+    <ProjectReference Include="..\ACHIM.Helper\ACHIM.ADConverter.csproj">
       <Project>{bce0c438-3af8-4eef-bf70-7bd339c314ad}</Project>
-      <Name>ACHIM.Helper</Name>
+      <Name>ACHIM.ADConverter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
