--- a/ACHIM.StopSwitch.Test/ACHIM.StopSwitch.Test.csproj
+++ b/ACHIM.StopSwitch.Test/ACHIM.StopSwitch.Test.csproj
@@ -65,9 +65,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ACHIM.Helper\ACHIM.Helper.csproj">
+    <ProjectReference Include="..\ACHIM.Helper\ACHIM.ADConverter.csproj">
       <Project>{bce0c438-3af8-4eef-bf70-7bd339c314ad}</Project>
-      <Name>ACHIM.Helper</Name>
+      <Name>ACHIM.ADConverter</Name>
     </ProjectReference>
     <ProjectReference Include="..\ACHIM.MotorControl\ACHIM.Positioning.csproj">
       <Project>{f72ac708-649c-4292-a9ab-012ffeedc15e}</Project>
